<resources>
    <string name="app_name">Child Health</string>
    <string name="todo">TODO</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="name">Name</string>
    <string name="mother_s_name">Mother\'s name</string>
    <string name="father_s_name">Father\'s name</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="comment">Comment</string>
    <string name="weight">Weight(kg)</string>
    <string name="height">Height(cm)</string>
    <string name="ok">Ok</string>
    <string name="child_registred">Child Registred</string>
    <string name="child_removed">Child Removed</string>
    <string name="vaccine_registred">Vaccine Registred</string>
</resources>
