<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.child.ChildActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNameChild" android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/name" android:gravity="center_horizontal"
            android:fontFamily="@font/kaeden_bold" android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/tvDateBirth"
            android:autofillHints="" android:maxLength="50"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvDateBirth" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/etNameChild" android:hint="@string/date_of_birth"
            android:fontFamily="@font/kaeden_bold" android:textSize="24sp"
            android:gravity="center_horizontal" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/etNameMother" android:autofillHints=""/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNameMother" android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDateBirth" android:hint="@string/mother_s_name"
            android:fontFamily="@font/kaeden_bold" android:textSize="24sp"
            android:gravity="center_horizontal" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/etNameFather" android:autofillHints="" android:maxLength="50"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNameFather" android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/etNameMother" android:gravity="center_horizontal"
            android:fontFamily="@font/kaeden_bold" android:textSize="24sp"
            android:hint="@string/father_s_name" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/ivChild" android:autofillHints="" android:maxLength="50"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivChild" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:srcCompat="@mipmap/baby"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etNameFather"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/btSave"
            android:contentDescription="@string/todo"/>
    <Button
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btSave" android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp" app:layout_constraintTop_toBottomOf="@+id/ivChild"
            app:layout_constraintHorizontal_bias="0.5" android:background="@color/colorPrimary"
            android:fontFamily="@font/kaeden_bold" android:textSize="24sp"
            android:textColor="@android:color/white"/>
</android.support.constraint.ConstraintLayout>