<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.vaccine.VaccineHistoryActivity">

    <Spinner
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:id="@+id/spVaccine" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNameChild" app:layout_constraintBottom_toTopOf="@+id/tvDate"
            app:layout_constraintStart_toEndOf="@+id/imageView" app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvDate" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:hint="@string/date"
            android:gravity="center_horizontal" app:layout_constraintHorizontal_bias="0.5"
            android:fontFamily="@font/kaeden_bold" android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/etWeight" android:autofillHints=""/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etWeight" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDate" android:gravity="center_horizontal"
            android:fontFamily="@font/kaeden_bold" android:textSize="24sp"
            android:hint="@string/weight" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/etHeight" android:autofillHints="" android:maxLength="6"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etHeight" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/etWeight" android:gravity="center_horizontal"
            android:fontFamily="@font/kaeden_bold" android:textSize="24sp"
            android:hint="@string/height" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/etComment" android:autofillHints="" android:maxLength="3"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvNameChild" android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp" android:gravity="center_horizontal"
            android:fontFamily="@font/kaeden_bold" android:textSize="30sp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintVertical_chainStyle="spread_inside"/>
    <Button
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btSave" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etComment"
            app:layout_constraintHorizontal_bias="0.5" android:background="@color/colorPrimary"
            android:fontFamily="@font/kaeden_bold" android:textSize="24sp"
            android:textColor="@android:color/white"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="229dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etComment" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/etHeight" android:hint="@string/comment"
            android:gravity="center_horizontal" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/btSave" android:autofillHints="" android:maxLength="1000"/>
    <ImageView
            android:layout_width="52dp"
            android:layout_height="41dp" app:srcCompat="@mipmap/cure"
            android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
            app:layout_constraintEnd_toStartOf="@+id/spVaccine" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toBottomOf="@+id/tvNameChild"
            app:layout_constraintBottom_toTopOf="@+id/tvDate" android:contentDescription="TODO"/>
</android.support.constraint.ConstraintLayout>